Fri Aug 19 11:48:51 BST 2005  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Fix prototype for ESet::operator[] to
	  take parameter of type termcount instead of doccount.

Wed Aug 17 11:50:54 BST 2005  Olly Betts <olly@survex.com>

	* common/safewindows.h: Fix compilation for cygwin.

Tue Aug 16 16:01:36 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/flint_types.h,backends/quartz/quartz_types.h:  Using
	  a double to hold the total document length would be a bad idea as
	  we need to store it exactly so kill FIXME comments that suggest
	  perhaps we should.

Fri Jul 15 11:11:35 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac,NEWS,PLATFORMS: Updated for 0.9.2.

Fri Jul 15 02:31:11 BST 2005  Olly Betts <olly@survex.com>

	* preautoreconf: Change directory to the directory that the
	  preautoreconf script is in before doing anything else.

Fri Jul 15 01:02:29 BST 2005  Olly Betts <olly@survex.com>

	* docs/doxygen_api_conf.in,docs/doxygen_full_conf.in,configure.ac:
	  Eliminate TOP_SRCDIR and TOP_BUILDDIR - it's better to just use
	  top_srcdir and top_builddir directly.

Fri Jul 15 00:48:39 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: Fix superfluous shell quoting.

Fri Jul 15 00:28:40 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac,docs/Makefile.am,preautoreconf,Makefile.am: Generate
	  the list of source files to feed to doxygen by inspecting all the
	  Makefile.am files prior to running autoreconf rather than by using
	  "find" when the user runs ./configure.  This speeds up configure,
	  avoids generating docs for random .cc and .h files which aren't
	  part of xapian-core, and avoids problems with picking up FIND.EXE
	  on MS Windows.

Thu Jul 14 12:49:36 BST 2005  Olly Betts <olly@survex.com>

	* common/,matcher/multimatch.cc,matcher/networkmatch.cc,
	  matcher/networkmatch.h,net/socketclient.cc,net/socketserver.cc,
	  tests/api_db.cc: Implement sorting on a value with the remote
	  backend.
